change pin assignment

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,5 +3,6 @@
     "cortex-debug.openocdPath": "/Users/johannes/Library/Application Support/Code/User/globalStorage/bmd.stm32-for-vscode/@xpack-dev-tools/openocd/0.11.0-4.1/.content/bin/openocd",
     "files.associations": {
         "lv_examples.h": "c"
-    }
+    },
+    "cmake.configureOnOpen": false
 }
